<resources>
    <string name="app_name">City Guide</string>

    <string name="FACEBOOK_APP_ID">298793957316127</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">be20b979add85f55d8359c41c734bb69</string>

    <string name="login_with_google">Login with Google</string>
    <string name="use_your_email">Use your email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="home_page">Home</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>


    //slide pane layout
    <string name="action_settings">Settings</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_location_provider">No loacation found</string>
    <string name="log_in">Log in</string>
    <string name="add_reminder">Add Reminder</string>

    <string name="profile">Profile</string>
    <string name="circles">Circle</string>
    <string name="reminder">Reminder</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <!--//reminder-->
    <string name="title">Title</string>


</resources>
