<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/cover_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/darker_gray"
        >

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cover_layout"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_view_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_user"
                android:tint="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_layout"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_view_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_email"
                android:tint="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_layout"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/image_view_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_lock"
                android:tint="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lockWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_view_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_lock"
                android:tint="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password_layout"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/light_green_solid_button"
            android:padding="12dp"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />
    </RelativeLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_above="@id/userLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/arifulhaqueanna"
        android:layout_marginBottom="-48dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFFF"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_add_profile"
        android:layout_alignBottom="@+id/profile_image"
        android:layout_alignRight="@+id/profile_image"
        android:layout_marginRight="10dp"
        />

</RelativeLayout>
